# publications

./: .gitignore  README.md  blurb  consensus-levels-design.md  kirq-ottawa-presentation.html  kirq-ottawa-strategy-daryl.html  outreach-targets-feb2026.md  paraxiom-investor-deck.html  paraxiom-value-summary-daryl.md  paraxiom-value-summary.html  qic-presentation.html
papers/: CONSERVATION_CONSTRAINED_AGGREGATION.md  cormier_injection_control_2026.tex  figure_torus_dynamics.tex  formal-verification-562-theorems.md  note_pack_spectral_gap_2026.tex  sinkhorn_validator_prototype.rs  toroidal_mesh_fixed.tex  toroidal_mesh_v2.tex  torus_attention_v3.blend  torus_attention_v4.blend  torus_attention_v4.blend1  torus_injection.blend  torus_injection_animation.py  torus_injection_final.blend  torus_injection_v2.blend  torus_injection_v2.blend1  torus_injection_v2.py
papers/augmented-democracy/: CLOSURE-CHECKLIST.md  README.md  SECTION-CUT-PLAN.md  ZENODO-APPENDIX.md  ZENODO-PRIMARY.md  beamer-deck.tex  main.tex  paper-appendix.tex  paper-core.tex  section-bridge-coherence-pipeline.tex  section-coherence-layers.tex  section-ux-friction.tex  section2-5-epistemic-infrastructure.tex  section3-governance-as-control-system.tex
papers/topological-coherence/: .gitignore  ABSTRACT_V2_DRAFT.md  DIVERGENCE_NOTE_20260116.md  LINKEDIN_POST_20260116.md  NUMANA_PITCH_20260116.md  README.md  (+3 more)
papers/topological-coherence/mdr-rust/: Cargo.toml  README.md
papers/topological-coherence/mdr-rust/src/: attention.rs  layer.rs  lib.rs  model.rs  tensor.rs  tokenizer.rs  topology.rs  training.rs
(+32 files in other folders)
