[package]
name = "mdr"
version = "0.1.0"
edition = "2021"
authors = ["Sylvain Cormier"]
description = "Meta Distributed Representations - Sparse, Topological, Temporal Neural Networks"
license = "MIT"

[dependencies]
# Tensor operations
ndarray = { version = "0.15", features = ["rayon"] }
ndarray-rand = "0.14"

# Random number generation
rand = "0.8"
rand_distr = "0.4"

# Parallel processing
rayon = "1.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Progress bars
indicatif = "0.17"

# Memory mapping for large tensors
memmap2 = "0.9"

# SIMD operations (optional, for performance)
packed_simd_2 = { version = "0.3", optional = true }

[features]
default = []
simd = ["packed_simd_2"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[[bin]]
name = "mdr-train"
path = "src/bin/train.rs"

[[bin]]
name = "mdr-infer"
path = "src/bin/infer.rs"
